--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.3.4",
     "mongoose-to-swagger": "^1.5.1",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "redis": "^4.6.14",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
