--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "redis": "^4.6.14",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {}
 }
