--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "config": "^3.3.12",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -21,6 +23,7 @@
     "mongoose-to-swagger": "^1.5.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
+    "qs": "^6.12.2",
     "redis": "^4.6.14",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
