--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "diacritics": "^1.3.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fuse.js": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongodb": "^6.6.1",
@@ -24,10 +26,11 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "qs": "^6.12.2",
-    "redis": "^4.6.14",
+    "redis": "^4.6.15",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "unaccent": "^0.0.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {}
