--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose-to-swagger": "^1.5.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.14",
     "qs": "^6.12.2",
     "redis": "^4.6.15",
     "swagger-autogen": "^2.23.7",
